--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Felipe Alvarez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
+    "express": "^4.17.1",
+    "prop-types": "^15.7.2"
   }
 }
