Player selection chnages added, values saved in store successfully

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node --inspect index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Felipe Alvarez",
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "prop-types": "^15.7.2"
   }
