--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --inspect index.js",
     "start": "node --inspect index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
@@ -16,6 +17,10 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.7.4",
     "prop-types": "^15.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.3"
   }
 }
